crates/icydb-core/tests/ui/db/registry_module_private.rs
use icydb_core::db::registry::StoreRegistry;

fn main() {}
